# Crowpanel_ImgTTS_animals

./: .gitattributes  .gitignore  CMakeLists.txt  partitions.csv  readme.md  readme_edit_scenario.md  sdkconfig.defaults
components/espressif__esp32_display_panel/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/espressif__esp32_display_panel/examples/arduino/gui/lvgl_v8/simple_port/: lv_conf.h
components/lv_mem_psram/: CMakeLists.txt  lv_mem_psram.c  lv_mem_psram.h
components/lvgl__lvgl/: CMakeLists.txt
components/ui/: CMakeLists.txt  builtin_texts.c  filelist.txt  tts_bridge_impl.c  ui.c  ui_Screen1.c  ui_Screen2.c  ui_comp_hook.c  ui_events.c  ui_font_Font1.c  ui_font_Font3.c  ui_font_Font4.c  ui_font_Font5.c  ui_helpers.c  ui_img_01_png.c  ui_img_020_png.c  ui_img_02_png.c  ui_img_03_png.c  ui_img_04_png.c  ui_img_05_png.c  ui_img_06_png.c  ui_img_07_png.c  ui_img_08_png.c  ui_img_09_png.c  ui_img_1049104300.c  ui_img_10_png.c  ui_img_11_png.c  ui_img_12_png.c  ui_img_13_png.c  ui_img_14_png.c  ui_img_15_png.c  ui_img_792570069.c  ui_img_81777710.c  ui_img_manager.c
components/ui/include/: builtin_texts.h  tts_bridge.h  ui.h  ui_Screen1.h  ui_Screen2.h  ui_events.h  ui_helpers.h  ui_img_manager.h
firmware/: flash_from_binaries.py  flash_tool.md
main/: CMakeLists.txt  HxTTS.cpp  HxTTS.h  Kconfig.projbuild  idf_component.yml  lvgl_v8_port.cpp  lvgl_v8_port.h  main.cpp  tts_bridge.cpp  uart.c  uart.h  uart_manager.c  uart_manager.h  uart_rx_task.c  uart_rx_task.h
main/hm_ctrl/: crc.h  crc_table.c  crc_table.h  hm_comm_protocol.c  hm_comm_protocol.h  hm_comm_protocol_def.h  hm_regs.c  hm_regs.h
python/: app.py
